--- a/roles/admin_access_sources/tasks/main.yml
+++ b/roles/admin_access_sources/tasks/main.yml
@@ -12,16 +12,16 @@
 
 - name: Determine the firewall default zone
   sudo: yes
-  command: firewall-cmd --get-default-zone
-  register: default_zone
+  command: firewall-cmd --get-zone-of-interface=eth0
+  register: eth0_zone
   changed_when: False
 
 #
 # Manage administrative SSH port access only when
-# targeting the default administrative firewall zone.
+# targeting the administrative firewall zone.
 #
 - name: Manage administrative SSH port access
-  when: firewall_zone == default_zone.stdout.strip()
+  when: firewall_zone == eth0_zone.stdout.strip()
   sudo: yes
   command: sed -ne 's/^\s*Port\s\+\([0-9]\+\)/\1/p' /etc/ssh/sshd_config
   register: sshd_port
