firewall_services empty by default

--- a/roles/admin_access_sources/tasks/main.yml
+++ b/roles/admin_access_sources/tasks/main.yml
@@ -76,7 +76,7 @@
         (firewall_services|default(False))
   with_nested:
   - "{{ admin_access_sources }}"
-  - "{{ firewall_services }}"
+  - "{{ firewall_services | default([]) }}"
   shell: echo
          'rule family="ipv4" source address="{{ item[0] }}"
          service name="{{ item[1] }}" accept' >> {{ temp_file }}
@@ -87,7 +87,7 @@
         (firewall_services|default(False))
   with_nested:
   - "{{ admin_access_sources_ipv6 }}"
-  - "{{ firewall_services }}"
+  - "{{ firewall_services | default([]) }}"
   shell: echo
          'rule family="ipv6" source address="{{ item[0] }}"
          service name="{{ item[1] }}" accept' >> {{ temp_file }}
